[FEATURE][WED-27] Fix styles for customizations menu on mobile

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
@@ -14,7 +14,7 @@
     display: flex;
     margin-bottom: 25px;
 
-    h1 {
+    .title-text {
       max-width: 240px;
       text-align: left;
     }
